syntax = "proto3";

import "google/protobuf/duration.proto";

option csharp_namespace = "Snotify.API.Grpc";

package SnotifyApi;

service NotificationSchedule {
    rpc GetNotificationStatus(GetNotificationStatusRequest) returns (NotificationStatusResponse) {}
    rpc ScheduleNotification(ScheduleNotificationRequest) returns (ScheduleNotificationResponse) {}
    rpc CancelNotification(CancelNotificationRequest) returns (CancelNotificationResponse) {}
}

message GetNotificationStatusRequest {
	string notification_id = 1;
}

message NotificationStatusResponse {
	string status = 1;
}

message ScheduleNotificationRequest {
	string source = 1;
	string destination = 2;
	string body = 3;
	string channel = 4;
	google.protobuf.Duration duration = 5;
}

message ScheduleNotificationResponse {
	string notification_id = 1;
}

message CancelNotificationRequest {
	string notification_id = 1;
}

message CancelNotificationResponse {
}